Add missing package in Dataset and packages section

--- a/scripts/Results manual validation.qmd
+++ b/scripts/Results manual validation.qmd
@@ -16,6 +16,7 @@ library(tidyverse)
 library(lubridate)
 library(networkD3)
 library(highcharter)
+library(ggalt)
 ```
 
 # Manual validation analysis
